--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Muli', sans-serif;
+  color: hsl(252, 6%, 33%);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +9,72 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.logo {
+  padding: 3rem;
+  -webkit-transition: -webkit-transform .4s ease-in-out;
+    transition:         transform .4s ease-in-out;
+
+}
+
+.logo:hover {
+  -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+}
+
+.date-wrapper {
+  margin-bottom: 0.5rem;
+}
+
+.date-info {
+  color: hsl(252, 6%, 33%);
+  font-family: 'Muli', sans-serif;
+
+  background-image: linear-gradient(to right,#FEFFBE 100%,#fff 0);
+  background-position: 0 110%;
+  background-repeat: repeat-x;
+  background-size: 100% 50%;
+}
+
+.tasks-header {
+  padding: 1.5rem;
+  text-align: left;
+}
+
+.form-text {
+  font-family: 'Muli', sans-serif;
+  font-size: 1rem;
+}
+
+.todo-card-title {
+  font-size: 1.5rem;
+  font-family: 'Muli', sans-serif;
+  color: hsl(252, 6%, 33%);
+  font-weight: 700;
+}
+
+.task-wrapper {
+  background-color: hsl(104, 84%, 90%);
+}
+
+.task-item {
+  padding-left: 1rem;
+  float: left;
+
+  color: hsl(252, 6%, 33%);
+  font-family: 'Muli', sans-serif;
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.delete-btn {
+  border-radius: 10px;
+  padding-right: 1rem;
+  float: right;
+}
+
+.delete-btn-text {
+  font-family: 'Muli', sans-serif;
+  font-weight: 700;
 }
